# cpp-template

./: README.md  cookiecutter.json
{{cookiecutter.name}}/: CMakeLists.txt  LICENSE.rst  NEWS.rst  README.rst  wscript
{{cookiecutter.name}}/examples/: example.cpp  wscript_build
{{cookiecutter.name}}/src/{{cookiecutter.name}}/: main.cpp  version.cpp  version.hpp  wscript_build
{{cookiecutter.name}}/test/: wscript_build
{{cookiecutter.name}}/test/src/: test_version.cpp
